--- a/site/index.html
+++ b/site/index.html
@@ -4,8 +4,8 @@
 	<title>hellooooo</title>
 </head>
 <body>
-<p>hiii everyone
+<p>hiii everyone</p>
 
-coursera course</p>
+<p>coursera course</p>
 </body>
 </html>
